commit 29da0b572d2affd66cc906d341632c79c2af6db4
Author: Andrea Zagli <azagli@libero.it>
Date:   2009-09-06

    Adjustments.

M	src/gdaex.c

commit dd4dd1c2a7cae405499cd414d5a947f2fc98270e
Author: Andrea Zagli <azagli@libero.it>
Date:	2009-09-04

    Added functions GdaEx::get_field_value_tm_at and
    GdaEx::get_value_tm_at.

M	docs/reference/libgdaex-decl-list.txt
M	docs/reference/libgdaex-decl.txt
M	docs/reference/libgdaex-undocumented.txt
M	docs/reference/libgdaex-unused.txt
M	src/gdaex.c
M	src/libgdaex.h

commit 245104a873eb045481a66b9b8e1a8700d7c3e43d
Author: Andrea Zagli <azagli@libero.it>
Date:	2009-08-29

    Bugfixes.

M	src/gdaex.c

commit 985d106276a05241732d16a6e73ccb48d7187300
Author: Andrea Zagli <azagli@libero.it>
Date:	2009-08-03

    Fixed many bugs.

M	autogen.sh
M	config.h.in
M	src/gdaex.c

commit fd74d16cfc4349941cc9027c15b321854d6b79e2
Author: Andrea Zagli <azagli@libero.it>
Date:	2009-07-26

    Fixed two functions not updated to libgda 4.

M	src/gdaex.c

commit ab767896012b16edac3bfe243ed83916fa540ad1
Author: Andrea Zagli <azagli@libero.it>
Date:	2009-07-26

    Yet old name in libgdaex.pc.in.

M	libgdaex.pc.in

commit 659c37bf0b8178599ac81b47ab11f2a6be3a8348
Author: Andrea Zagli <azagli@libero.it>
Date:	2009-07-26

    Updated to libgda 4.

M	.gitignore
A	docs/reference/libgdaex-decl-list.txt
A	docs/reference/libgdaex-decl.txt
A	docs/reference/libgdaex-docs.sgml
C100	docs/reference/libgdaoj-overrides.txt
docs/reference/libgdaex-overrides.txt
R100	docs/reference/libgdaoj-sections.txt
docs/reference/libgdaex-sections.txt
R075	docs/reference/libgdaoj-undocumented.txt
docs/reference/libgdaex-undeclared.txt
A	docs/reference/libgdaex-undocumented.txt
A	docs/reference/libgdaex-unused.txt
R100	docs/reference/tmpl/libgdaoj-unused.sgml
docs/reference/libgdaex.args
C100	docs/reference/libgdaoj-overrides.txt
docs/reference/libgdaex.hierarchy
C100	docs/reference/libgdaoj-overrides.txt
docs/reference/libgdaex.interfaces