@@ -11,11 +11,7 @@ config.status
 config.sub
 configure
 depcomp
-docs/Makefile
-docs/Makefile.in
-docs/reference/Makefile
-docs/reference/Makefile.in
-docs/reference/version.xml
+version.xml
 gtk-doc.make
 install-sh
 libgdaex.pc
@@ -24,14 +20,13 @@ ltmain.sh
 m4/
 missing
 src/.deps/
-src/Makefile
-src/Makefile.in
 stamp-h1
 *.stamp
 docs/reference/html/
 docs/reference/xml/
 src/.libs/
-src/gdaex.lo
-src/gdaex.o
-src/libgdaex.la
+*.lo
+*.o
+*.la
 *.bak
+libgdaex*tar*
