@@ -1,29 +1,28 @@
 <SECTION>
-<FILE>libgdaobj</FILE>
-GdaO
-gdao_new
-gdao_new_from_string
-gdao_new_from_connection
-gdao_get_gdaclient
-gdao_get_gdaconnection
-gdao_get_provider
-gdao_query
-gdao_data_model_get_field_value_stringify_at
-gdao_data_model_get_field_value_integer_at
-gdao_data_model_get_field_value_float_at
-gdao_data_model_get_field_value_double_at
-gdao_data_model_get_field_value_boolean_at
-gdao_data_model_get_field_value_gdate_at
-gdao_data_model_get_value_stringify_at
-gdao_data_model_get_value_integer_at
-gdao_data_model_get_value_float_at
-gdao_data_model_get_value_double_at
-gdao_data_model_get_value_boolean_at
-gdao_data_model_get_value_gdate_at
-gdao_begin
-gdao_execute
-gdao_commit
-gdao_rollback
-gdao_free
+<FILE>libgdaex</FILE>
+GdaEx
+gdaex_new_from_dsn
+gdaex_new_from_string
+gdaex_new_from_connection
+gdaex_get_gdaconnection
+gdaex_get_provider
+gdaex_query
+gdaex_data_model_get_field_value_stringify_at
+gdaex_data_model_get_field_value_integer_at
+gdaex_data_model_get_field_value_float_at
+gdaex_data_model_get_field_value_double_at
+gdaex_data_model_get_field_value_boolean_at
+gdaex_data_model_get_field_value_gdate_at
+gdaex_data_model_get_value_stringify_at
+gdaex_data_model_get_value_integer_at
+gdaex_data_model_get_value_float_at
+gdaex_data_model_get_value_double_at
+gdaex_data_model_get_value_boolean_at
+gdaex_data_model_get_value_gdate_at
+gdaex_begin
+gdaex_execute
+gdaex_commit
+gdaex_rollback
+gdaex_free
 </SECTION>
 
