@@ -1,25 +1,0 @@
-GdaO
-gdao_begin
-gdao_commit
-gdao_data_model_get_field_value_boolean_at
-gdao_data_model_get_field_value_double_at
-gdao_data_model_get_field_value_float_at
-gdao_data_model_get_field_value_gdate_at
-gdao_data_model_get_field_value_integer_at
-gdao_data_model_get_field_value_stringify_at
-gdao_data_model_get_value_boolean_at
-gdao_data_model_get_value_double_at
-gdao_data_model_get_value_float_at
-gdao_data_model_get_value_gdate_at
-gdao_data_model_get_value_integer_at
-gdao_data_model_get_value_stringify_at
-gdao_execute
-gdao_free
-gdao_get_gdaclient
-gdao_get_gdaconnection
-gdao_get_provider
-gdao_new
-gdao_new_from_connection
-gdao_new_from_string
-gdao_query
-gdao_rollback
