@@ -1,38 +1,14 @@
 GDAEX
 GDAEX_CLASS
 GDAEX_GET_CLASS
-GdaEx
 GdaExClass
 IS_GDAEX
 IS_GDAEX_CLASS
 TYPE_GDAEX
-gdaex_begin
-gdaex_commit
-gdaex_data_model_get_field_value_boolean_at
-gdaex_data_model_get_field_value_double_at
-gdaex_data_model_get_field_value_float_at
-gdaex_data_model_get_field_value_gdate_at
 gdaex_data_model_get_field_value_gdatimestamp_at
-gdaex_data_model_get_field_value_integer_at
-gdaex_data_model_get_field_value_stringify_at
 gdaex_data_model_get_field_value_tm_at
-gdaex_data_model_get_value_boolean_at
-gdaex_data_model_get_value_double_at
-gdaex_data_model_get_value_float_at
-gdaex_data_model_get_value_gdate_at
 gdaex_data_model_get_value_gdatimestamp_at
-gdaex_data_model_get_value_integer_at
-gdaex_data_model_get_value_stringify_at
 gdaex_data_model_get_value_tm_at
-gdaex_execute
-gdaex_free
 gdaex_get_chr_quoting
-gdaex_get_gdaconnection
-gdaex_get_provider
 gdaex_get_type
-gdaex_new_from_connection
-gdaex_new_from_dsn
-gdaex_new_from_string
-gdaex_query
-gdaex_rollback
 gdaex_strescape
