@@ -1,24 +1,28 @@
-<!-- ##### SECTION ./tmpl/libgdaex.sgml:Long_Description ##### -->
+<!-- ##### SECTION ./tmpl/libgdaobj.sgml:Image ##### -->
+
+
+
+<!-- ##### SECTION ./tmpl/libgdaobj.sgml:Long_Description ##### -->
 <para>
 
 </para>
 
 
-<!-- ##### SECTION ./tmpl/libgdaex.sgml:See_Also ##### -->
+<!-- ##### SECTION ./tmpl/libgdaobj.sgml:See_Also ##### -->
 <para>
 
 </para>
 
 
-<!-- ##### SECTION ./tmpl/libgdaex.sgml:Short_Description ##### -->
+<!-- ##### SECTION ./tmpl/libgdaobj.sgml:Short_Description ##### -->
 
 
 
-<!-- ##### SECTION ./tmpl/libgdaex.sgml:Stability_Level ##### -->
+<!-- ##### SECTION ./tmpl/libgdaobj.sgml:Stability_Level ##### -->
 
 
 
-<!-- ##### SECTION ./tmpl/libgdaex.sgml:Title ##### -->
+<!-- ##### SECTION ./tmpl/libgdaobj.sgml:Title ##### -->
 libgdaobj
 
 
