@@ -17,3 +17,247 @@ libgdaobj
 <!-- ##### SECTION Stability_Level ##### -->
 
 
+<!-- ##### SECTION Image ##### -->
+
+
+<!-- ##### STRUCT GdaEx ##### -->
+<para>
+
+</para>
+
+@parent: 
+
+<!-- ##### FUNCTION gdaex_new_from_dsn ##### -->
+<para>
+
+</para>
+
+@dsn: 
+@username: 
+@password: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_new_from_string ##### -->
+<para>
+
+</para>
+
+@cnc_string: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_new_from_connection ##### -->
+<para>
+
+</para>
+
+@conn: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_get_gdaconnection ##### -->
+<para>
+
+</para>
+
+@gdaex: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_get_provider ##### -->
+<para>
+
+</para>
+
+@gdaex: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_query ##### -->
+<para>
+
+</para>
+
+@gdaex: 
+@sql: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_field_value_stringify_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@field_name: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_field_value_integer_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@field_name: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_field_value_float_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@field_name: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_field_value_double_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@field_name: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_field_value_boolean_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@field_name: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_field_value_gdate_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@field_name: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_value_stringify_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@col: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_value_integer_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@col: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_value_float_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@col: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_value_double_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@col: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_value_boolean_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@col: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_data_model_get_value_gdate_at ##### -->
+<para>
+
+</para>
+
+@data_model: 
+@row: 
+@col: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_begin ##### -->
+<para>
+
+</para>
+
+@gdaex: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_execute ##### -->
+<para>
+
+</para>
+
+@gdaex: 
+@sql: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_commit ##### -->
+<para>
+
+</para>
+
+@gdaex: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_rollback ##### -->
+<para>
+
+</para>
+
+@gdaex: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gdaex_free ##### -->
+<para>
+
+</para>
+
+@gdaex: 
+
+
